project-name/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-name-service
  labels:
    app: project-name
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: project-name
